- Added resume template - Render resume to HTML - Export PDF (There are few issue) - Keep sections collapsed when loading saved resume

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ table {
   padding-bottom: 10px;
   text-align: center;
 }
-.save {
+.button {
   margin-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
